Fixing layout issue with two column view.

--- a/src-gwt/com/alkacon/acacia/client/css/form.css
+++ b/src-gwt/com/alkacon/acacia/client/css/form.css
@@ -77,7 +77,7 @@ div.attributeValue.secondColumn{
 }
 
 /* clear both after the widget holder */
-.attributeValue.singleLine > div.widgetHolder:after{
+.attributeValue > div.widgetHolder:after{
 	content: ".";
     display: block;
     height: 0;
